--- a/views/index.hbs
+++ b/views/index.hbs
@@ -32,7 +32,7 @@
 
             {{!-- For each row, print the id, first_name, last_name, etc, in order --}}
             {{#each data}}
-            <tr data-value={{this.customer_id}}>>
+            <tr data-value={{this.customer_id}}>
                 <td>{{this.customer_id}}</td>
                 <td>{{this.first_name}}</td>
                 <td>{{this.last_name}}</td>
