--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -14,11 +14,11 @@
 
     <nav>
         <a href='/' action='/'>Customers</a> | 
-        <a href="orders.html">Orders</a> | 
-        <a href="ordered_movies.html">Ordered_Movies</a> | 
+        <a href='../orders' action='../orders'>Orders</a> | 
+        <a href='../ordered_movies' action='../ordered_movies'>Ordered Movies</a> | 
         <a href='../movies' action='../movies'>Movies</a> | 
-        <a href="available_rentals.html">Available_Rentals</a> | 
-        <a href="locations.html">Locations</a>
+        <a href='../available_rentals' action='../available_rentals'>Available Rentals</a> | 
+        <a href='../locations' action='../locations'>Locations</a> | 
     </nav>
 
 
