--- a/views/index.hbs
+++ b/views/index.hbs
@@ -106,7 +106,7 @@
                 <input type="submit" value="Add Customer">
             </div>
         </form>
-        {{!-- Embed our javascript to handle the DOM manipulation and AJAX request --}}
+        {{!-- Embed javascript to handle the DOM manipulation and AJAX request --}}
         <script src="./js/add_customer.js"></script>
     </div> <!-- End of Add Customer Column -->
 
@@ -117,16 +117,24 @@
         <h3>Update Customer</h3>
             <div class = "form-inputs">
                 <div>
-                    <div>
-                        <label for="input-fullname">Full name: </label>
-                    </div>
-                    <select name="input-fullname" id="mySelect" onChange="formFill()">
-                        <option value="input-update-street">Select a Person</option>
+                    <label for="input-update-customer">Full name: </label>
+                    <select name="input-update-customer" id="update-customer">
+                        <option value="input-update-customer">Select a Person</option>
                         {{#each data}}
                         <option value="{{this.customer_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
                     </select>
                 </div>
+
+                <div>
+                    <label for="input-update-fname">First Name: </label>
+                    <input type="text" name="input-update-fname" id="input-update-fname">
+                </div>
+                <div>
+                    <label for="input-update-lname">Last Name: </label>
+                    <input type="text" name="input-update-lname" id="input-update-lname">
+                </div>
+
                 <div>
                     <label for="input-update-street">Street: </label>
                     <input type="text" name="input-update-street" id="input-update-street">                    
@@ -134,9 +142,33 @@
                 <div>
                     <label for="input-update-city">City: </label>
                     <input type="text" name="input-update-city" id="input-update-city">                    
-                </div>   
+                </div>
+                <div>
+                    <label for="input-update-state">State: </label>
+                    <input type="text" name="input-update-state" id="input-update-state">
                 </div>
 
+                <div>
+                    <label for="input-update-zip">Zip: </label>
+                    <input type="number" name="input-update-zip" id="input-update-zip">
+                </div>
+
+                <div>
+                    <label for="input-update-phone">Phone Number: </label>
+                    <input type="number" name="input-update-phone" id="input-update-phone">
+                </div>
+
+                <div>
+                    <label for="input-update-active-rentals">Active Rentals: </label>
+                    <input type="number" name="input-update-active-rentals" id="input-update-active-rentals">
+                </div>
+
+                <div>
+                    <label for="input-update-total-rentals">Total Rentals: </label>
+                    <input type="number" name="input-update-total-rentals" id="input-update-total-rentals">
+                </div>
+
+                </div>
                 <input type="submit" value= "Update Customer">
             </div>
         </form>
