--- a/views/index.hbs
+++ b/views/index.hbs
@@ -112,14 +112,13 @@
 
 
 <div class = "column">
-    <div>
         <form id="update-customer-form-ajax">
         <h3>Update Customer</h3>
             <div class = "form-inputs">
                 <div>
                     <label for="input-update-customer">Full name: </label>
                     <select name="input-update-customer" id="update-customer">
-                        <option value="input-update-customer">Select a Person</option>
+                        <option value="input-update-customer">Select a Customer</option>
                         {{#each data}}
                         <option value="{{this.customer_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
@@ -168,13 +167,13 @@
                     <input type="number" name="input-update-total-rentals" id="input-update-total-rentals">
                 </div>
 
-                </div>
+                
                 <input type="submit" value= "Update Customer">
             </div>
         </form>
     <script src="./js/update_customer.js"></script>
-    </div>
 </div> <!-- End of update Customer Column -->
+
 </div> <!-- End of Row -->
 
 
@@ -195,17 +194,7 @@
 </div> <!-- End of Search column -->
 
 
-<div class = "column">
-    <form id="placeholder">
-    <h3>Placeholder</h3>
-    <div class = "form-inputs">
-        <div>
-            <label for="input-fullname">Full name: </label>
-        </div>
-            <input type="submit">
-    </div>
-    </form>
-</div>
+
 
 </div><!-- End of Row -->
 
