Fixed slect menu label name

--- a/views/ordered_movies.hbs
+++ b/views/ordered_movies.hbs
@@ -52,9 +52,9 @@
             <h3>Add New Ordered Movie</h3>
             <div class = "form-inputs">
                 <div>
-                    <label for="update-orderedMovie-order-id">Order: </label>
-                    <select name="update-orderedMovie-order-id" id="orderedMovieSelect">
-                        <option value="update-orderedMovie-order-id">Select an Order</option>
+                    <label for="orderedMovie-order-id">Order: </label>
+                    <select name="orderedMovie-order-id" id="orderedMovieSelect">
+                        <option value="orderedMovie-order-id">Select an Order</option>
                         {{#each data}}
                         <option value="{{this.order_id}}">{{this.order_id}}</option>
                         {{/each}}
