--- a/views/ordered_movies.hbs
+++ b/views/ordered_movies.hbs
@@ -32,30 +32,31 @@
 
             {{!-- For each row, print the id, first_name, last_name, etc, in order --}}
             {{#each data}}
-            <tr data-value={{this.order_id}}>
+            <tr data-value={{this.ordered_movies_id}}>
+                <td>{{this.ordered_movies_id}}</td>
                 <td>{{this.order_id}}</td>
                 <td>{{this.movie_id}}</td>
                 <td>{{this.quantity}}</td>
-                <td><button onclick="deleteOrderedMovie({{this.order_id}})">Delete</button></td>                                                    
+                <td><button onclick="deleteOrderedMovie({{this.ordered_movies_id}})">Delete</button></td>                                                    
             </tr>
             {{/each}}
         </tbody>
     </table>
-    <script src="./js/delete_orderedMovie.js"></script>
+    <script src="./js/delete_ordered_movies.js"></script>
 </div>
 
 
 <!-- Add new ordered Movie form -->
 <div class = "row">
     <div class = "column">
-        <form id="add-orderedMovie-form-ajax">
+        <form id="add-ordered-movie-form-ajax">
             <h3>Add New Ordered Movie</h3>
             <div class = "form-inputs">
                 <div>
-                    <label for="orderedMovie-order-id">Order: </label>
-                    <select name="orderedMovie-order-id" id="orderedMovieSelect">
-                        <option value="orderedMovie-order-id">Select an Order</option>
-                        {{#each data}}
+                    <label for="ordered-movie-order-id">Order: </label>
+                    <select name="orderedMovie-order-id" id="ordered-movie-order-id">
+                        <option value="ordered-movie-order-id">Select an Order</option>
+                        {{#each orders}}
                         <option value="{{this.order_id}}">{{this.order_id}}</option>
                         {{/each}}
                     </select>
@@ -66,15 +67,45 @@
                         <select name="input-movie-id" id="input-movie-id">
                             <option value="input-movie-id">Select a Movie</option>
                             {{#each movies}}
-                                <option value="{{this.movie_id}}">{{this.movie_id}}</option>
+                                <option value="{{this.movie_id}}">{{this.movie_title}}</option>
                             {{/each}}
                     </select>
                 </div>
+
+                <div>
+                    <label for="input-order-movie-quantity">Quantity: </label>
+                    <input type="number" name="input-order-movie-quantity" id="input-order-movie-quantity">
+                </div>
+
                 <input type="submit" value="Add Ordered Movie">
             </div>
         </form>
         {{!-- Embed our javascript to handle the DOM manipulation and AJAX request --}}
-        <script src="./js/add_orderedMovie.js"></script>
+        <script src="./js/add_ordered_movies.js"></script>
     </div> <!-- End of Add Ordered Movie Column -->
+
+
+<!-- Filter by order ID -->
+    <div class = "column">
+        <form id="filter-order-html" method='GET' action='/ordered_movies'>
+            <h3>Filter by Order ID</h3>
+            <div class = "form-inputs">
+                <div>
+                    <label for="filter-order-id">Order ID: </label>
+                    <select name="filterOrder" id="filter-order-id">
+                        <option></option>
+                        {{#each orders}}
+                        <option value="{{this.order_id}}">{{this.order_id}}</option>
+                        {{/each}}
+                    </select>
+                </div>
+
+                <input type="submit" value="Filter Order">
+                <a href='/'><button>Reset Results</button></a>
+            </div>
+        </form>
+    </div> <!-- End of filter order Column -->
+
+</div><!-- End of Row -->
 
 </main>
