--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -33,49 +33,67 @@
                 <td>{{this.movie_title}}</td>
                 <td>{{this.release_date}}</td>
                 <td>{{this.genre}}</td>
-                <td><onclick="deleteMovie{{this.movie_id}}"><button>Delete</button></a></td>                                                   
+                <td><button onclick="deleteMovie({{this.movie_id}})">Delete</button></td>                                                   
             </tr>
             {{/each}}
         </tbody>
     </table>
+    <script src="./js/delete_movie.js"></script>
 </div>
-
-    <h2>Search Using an HTML Form</h2>
-<p>Search by title below. Partial last names are OK too!</p>
-<form id="search-movie-html" method='GET' action='/movies'>
-    <label for="input-title">Search by Movie Title: </label>
-    <input type="text" name="movie_title" id="input-title-html-search">
-    
-    <input type="submit">
-    <a href='/'><button>Reset</button></a>
-</form>
+<div class = "row">
+    <div class = "column">
+    <form id="search-movie-html">
+        <h3>Search For Movies</h3>
+        <div class= "form-inputs">
+            <div>
+                <label for="input-title">Search by Movie Title: </label>
+                <input type="text" name="movie_title" id="input-title-html-search">
+            </div>
+            <input type="submit" value="Search Movies">
+            <a href='/movies'><button>Reset</button></a>
+        </div>
+    </form>
+    </div>
 
 
 {{!-- Form to add a record to the table  --}}
-<p>To add a new movie, please enter their information below and click 'Submit'!</p>
-<form id="add-movie-form-ajax">
-    <label for="input-movie_title">Movie Title: </label>
-    <input type="text" name="input-title" id="input-title">
-    
-    <label for="input-release_date">Year of Release: </label>
-    <input type="number" name="input-release_date" id="input-release_date">
-
-    <label for="input-genre">Genre: </label>
-    <input type="text" name="input-genre" id="input-genre">
-
-    <input type="submit">
-</form>
-
-<h2>Updating Movie Form</h2>
-<!-- Update movie form -->
-<div class= "column">
-    <form id="update-movie-form-ajax">
-        <h3>Update Movie</h3>
-        <div class = "form-inputs">
+    <div class = "column">
+        <form id="add-movie-form-ajax">
+            <h3>Add A New Movie:</h3>
+            <p><strong> Note: you may need to refresh the page to see the new items added. </strong></p>
             <div>
-                <label for="update-movie-id">Movie Title: </label>
-                <select name="update-movie-id" id="movieSelect">
-                    <option value="update-movie-id">Select A Movie To Edit</option>
+                <label for="input-movie_title">Movie Title: </label>
+            </div>
+            <div>
+                <input type="text" name="input-title" id="input-title">
+            </div>
+                <div>
+                <label for="input-release_date">Year of Release: </label>
+                </div>
+                <div>
+                <input type="number" name="input-release_date" id="input-release_date">
+                </div>
+                <div>
+                <label for="input-genre">Genre: </label>
+                <div>
+                <input type="text" name="input-genre" id="input-genre">
+                </div>
+            </div>
+            <input type="Submit" value="Add Movie">
+        </form>
+    <script src="./js/add_movie.js"></script>
+    </div>
+</div>
+
+<div class= "row">
+    <div class="column">
+        <form id="update-movie-form-ajax">
+        <h3>Update Movie</h3>
+        <div class= "form-inputs">
+            <div>
+                <label for="update-order-id">Movie Title: </label>
+                <select name="update-movie_title" id="movieSelect">
+                    <option value="update-order-id">Select a Movie</option>
                     {{#each data}}
                     <option value="{{this.movie_title}}">{{this.movie_title}}</option>
                     {{/each}}
@@ -91,21 +109,13 @@
                 <label for="input-genre">Genre: </label>
                 <input type="text" name="input-genre" id="input-genre-update">
             </div>
+    
+            <input type="submit" value="Update">
 
-            <input type="submit" value="Update Movie">
-        </div>
-    </form>
-</div><!-- End of update Order Column -->
-</div> <!-- End of Row -->
+        </form>
 
-
-{{!-- Embed our javascript to handle the DOM manipulation and AJAX request --}}
-<script src="./js/add_movie.js"></script>
-
-<script src="./js/delete_movie.js"></script>
-
-<script src="./js/update_movie.js"></script>
-
-
+        <script src="./js/update_movie.js"></script>
+    </div>
+</div>
 
 </main>
