--- a/views/movies.hbs
+++ b/views/movies.hbs
@@ -95,11 +95,14 @@
                 <select name="update-movie_title" id="movieSelect">
                     <option value="update-order-id">Select a Movie</option>
                     {{#each data}}
-                    <option value="{{this.movie_title}}">{{this.movie_title}}</option>
+                    <option value="{{this.movie_id}}">{{this.movie_title}}</option>
                     {{/each}}
                 </select>
             </div>
-
+            <div>
+                <label for="update-movie">movie title: </label>
+                <input type="text" name="update-movie" id="update-movie">
+            </div>
             <div>
                 <label for="input-release_date">Year of Release: </label>
                 <input type="number" name="input-release_date" id="input-release_date-update">
