capitilized Update word on button

--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -154,7 +154,7 @@
                 </select>
             </div>
 
-            <input type="submit" value="update Order">
+            <input type="submit" value="Update Order">
         </div>
     </form>
     {{!-- Embed javascript to handle the DOM manipulation and AJAX request --}}
