Fixed location_id in add new form

--- a/views/available_rentals.hbs
+++ b/views/available_rentals.hbs
@@ -67,7 +67,7 @@
                     <select name="input-avail-location-id" id="input-avail-location-id">
                         <option value="input-avail-location-id">Select a Location</option>
                         {{#each locations}}
-                        <option value="{{this.Location_id}}">#{{this.location_id}}: {{this.location_street}}, 
+                        <option value="{{this.location_id}}">#{{this.location_id}}: {{this.location_street}}, 
                             {{this.location_city}}, {{this.location_state}}</option>
                         {{/each}}
                     </select>
