--- a/views/index.hbs
+++ b/views/index.hbs
@@ -61,12 +61,12 @@
             <div class = "form-inputs">
                 <div>
                     <label for="input-fname">First Name: </label>
-                    <input type="text" name="input-fname" id="input-fname">
+                    <input type="text" name="input-fname" id="input-fname" required="required" placeholder="Required">
                 </div>
 
                 <div>
                     <label for="input-lname">Last Name: </label>
-                    <input type="text" name="input-lname" id="input-lname">
+                    <input type="text" name="input-lname" id="input-lname" required="required" placeholder="Required">
                 </div>
 
                 <div>
@@ -128,11 +128,11 @@
 
                 <div>
                     <label for="input-update-fname">First Name: </label>
-                    <input type="text" name="input-update-fname" id="input-update-fname">
+                    <input type="text" name="input-update-fname" id="input-update-fname" required="required" placeholder="Required">
                 </div>
                 <div>
                     <label for="input-update-lname">Last Name: </label>
-                    <input type="text" name="input-update-lname" id="input-update-lname">
+                    <input type="text" name="input-update-lname" id="input-update-lname" required="required" placeholder="Required">
                 </div>
 
                 <div>
@@ -167,7 +167,6 @@
                     <label for="input-update-total-rentals">Total Rentals: </label>
                     <input type="number" name="input-update-total-rentals" id="input-update-total-rentals">
                 </div>
-
                 
                 <input type="submit" value= "Update Customer">
             </div>
@@ -186,7 +185,7 @@
         <div class = "form-inputs">
             <div>
                 <label for="input-lname">Last Name: </label>
-                <input type="text" name="lname" id="input-lname-html-search">
+                <input type="text" name="lname" id="input-lname-html-search" >
             </div>
             <input type="submit" value= "Search customer">
             <a href='/index'><button>Reset Results</button></a>
