--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -55,8 +55,8 @@
             <div class = "form-inputs">
                 <div>
                     <label for="input-customer-id">Customer: </label>
-                    <select name="input-customer-id" id="input-customer-id">
-                        <option value="input-customer-id">Select a Customer</option>
+                    <select name="input-customer-id" id="input-customer-id" required="required" >
+                        <option value="">Select a Customer</option>
                         {{#each customers}}
                         <option value="{{this.customer_id}}">{{this.first_name}} {{this.last_name}}</option>
                         {{/each}}
@@ -65,8 +65,8 @@
 
                 <div>
                     <label for="input-location-id">Location: </label>
-                        <select name="input-location-id" id="input-location-id">
-                            <option value="input-location-id">Select a Location</option>
+                        <select name="input-location-id" id="input-location-id" required="required">
+                            <option value="">Select a Location</option>
                             {{#each locations}}
                             <option value="{{this.location_id}}">#{{this.location_id}}: {{this.location_street}}, 
                                 {{this.location_city}}, {{this.location_state}}</option>
@@ -75,13 +75,13 @@
                 </div>
 
                 <div>
-                    <label for="input-order-date">Order Date(YYYY-MM-DD): </label>
-                    <input type="text" name="input-order-date" id="input-order-date">                    
+                    <label for="input-order-date">Order Date: </label>
+                    <input type="date" name="input-order-date" id="input-order-date" required="required">                    
                 </div>  
 
                 <div>
-                    <label for="input-return-date">Return Date (YYYY-MM-DD): </label>
-                    <input type="text" name="input-return-date" id="input-return-date">
+                    <label for="input-return-date">Return Date: </label>
+                    <input type="date" name="input-return-date" id="input-return-date">
                 </div>
 
                 <div>
@@ -107,8 +107,8 @@
         <div class = "form-inputs">
             <div>
                 <label for="update-order-id">Order: </label>
-                <select name="update-order-id" id="update-order">
-                    <option value="update-order-id">Select an Order</option>
+                <select name="update-order-id" id="update-order" required="required">
+                    <option value="">Select an Order</option>
                     {{#each data}}
                     <option value="{{this.order_id}}">{{this.order_id}}</option>
                     {{/each}}
@@ -117,8 +117,8 @@
 
             <div>
                 <label for="update-customer-id">Customer: </label>
-                <select name="update-customer-id" id="update-customer-id">
-                    <option value="update-customer-id">Select a Customer</option>
+                <select name="update-customer-id" id="update-customer-id" required="required">
+                    <option value="">Select a Customer</option>
                     {{#each customers}}
                     <option value="{{this.customer_id}}">{{this.first_name}} {{this.last_name}}</option>
                     {{/each}}
@@ -127,8 +127,8 @@
 
             <div>
                 <label for="update-location-id">Location: </label>
-                <select name="update-location-id" id="update-location-id">
-                    <option value="update-location-id">Select a Location</option>
+                <select name="update-location-id" id="update-location-id" required="required">
+                    <option value="">Select a Location</option>
                     {{#each locations}}
                     <option value="{{this.location_id}}">#{{this.location_id}}: {{this.location_street}}, 
                         {{this.location_city}}, {{this.location_state}}</option>
@@ -137,13 +137,13 @@
             </div>
 
             <div>
-                <label for="update-order-date">Order Date(YYYY-MM-DD): </label>
-                <input type="text" name="update-order-date" id="update-order-date">                    
+                <label for="update-order-date">Order Date: </label>
+                <input type="date" name="update-order-date" id="update-order-date">                    
             </div>  
 
             <div>
-                <label for="update-return-date">Return Date (YYYY-MM-DD): </label>
-                <input type="text" name="update-return-date" id="update-return-date">
+                <label for="update-return-date">Return Date: </label>
+                <input type="date" name="update-return-date" id="update-return-date">
             </div>
 
             <div>
