--- a/views/ordered_movies.hbs
+++ b/views/ordered_movies.hbs
@@ -92,7 +92,7 @@
             <div class = "form-inputs">
                 <div>
                     <label for="filter-order-id">Order ID: </label>
-                    <select name="filterOrder" id="filter-order-id">
+                    <select name="filter" id="filter-order-id">
                         <option value="">Select Order ID</option>
                         {{#each orders}}
                         <option value="{{this.order_id}}">{{this.order_id}}</option>
