--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -33,9 +33,9 @@
             {{#each data}}
             <tr data-value={{this.[ID]}}>
                 <td>{{this.[ID]}}</td>
-                <td>{{this.[Customer_Name]}}</td>
-                <td>{{this.[Location_Address]}}</td>
-                <td>{{this.[Order_Date]}}</td>
+                <td data-customer_id={{this.[ID]}}>{{this.[Customer_Name]}}</td>
+                <td data-location_id={{this.[ID]}}>{{this.[Location_Address]}}</td>
+                <td data-orderDate_id={{this.[ID]}}>{{this.[Order_Date]}}</td>
                 <td>{{this.[Return_Date]}}</td>
                 <td>{{this.[Is_Overdue]}}</td>
                 <td><button onclick="deleteOrder({{this.[ID]}})">Delete</button></td>                                                    
@@ -58,7 +58,7 @@
                     <select name="input-customer-id" id="input-customer-id" required="required" >
                         <option value="">Select a Customer</option>
                         {{#each customers}}
-                        <option value="{{this.customer_id}}">{{this.first_name}} {{this.last_name}}</option>
+                        <option value="{{this.customer_id}}">{{this.customer_id}} </option>
                         {{/each}}
                     </select>
                 </div>
@@ -107,7 +107,7 @@
         <div class = "form-inputs">
             <div>
                 <label for="update-order-id">Order: </label>
-                <select name="update-order-id" id="update-order" required="required">
+                <select name="update-order-id" id="update-order" required="required" onchange="autoFill()">
                     <option value="">Select an Order</option>
                     {{#each data}}
                     <option value="{{this.[ID]}}">{{this.[ID]}}</option>
